# LosslessProxy

./: .gitmodules  CMakeLists.txt  DISCLAIMER.md  LICENSE  README.md  addon.json  build.bat
LosslessProxy/: CMakeLists.txt  build.bat
LosslessProxy/sdk/examples/example_addon/: CMakeLists.txt  main.cpp
LosslessProxy/sdk/include/lsproxy/: addon_exports.h  addon_sdk.h  events.h  ihost.h  version.h
LosslessProxy/src/addon/: addon_dependency.cpp  addon_dependency.h  addon_info.h  addon_manager.cpp  addon_manager.h  addon_security.cpp  addon_security.h
LosslessProxy/src/config/: config_manager.cpp  config_manager.h
LosslessProxy/src/core/: d3d11_hook.cpp  d3d11_hook.h  iat_patcher.h  main.cpp  proxy_exports.h  shader_hook.cpp  shader_hook.h
LosslessProxy/src/event/: event_system.cpp  event_system.h
LosslessProxy/src/gui/: gui_manager.cpp  gui_manager.h  gui_style.cpp  gui_style.h  icon_loader.cpp  icon_loader.h
LosslessProxy/src/gui/tabs/: tab_about.cpp  tab_about.h  tab_addons.cpp  tab_addons.h  tab_logs.cpp  tab_logs.h  tab_settings.cpp  tab_settings.h
LosslessProxy/src/gui/widgets/: addon_card.cpp  addon_card.h  search_bar.cpp  search_bar.h  toast.cpp  toast.h  toggle_switch.cpp  toggle_switch.h
LosslessProxy/src/host/: host_impl.cpp  host_impl.h
LosslessProxy/src/log/: logger.cpp  logger.h
addons/LSP-ReShade/: README.md  build.bat
addons/LSP-ReShade/src/: window_manager.cpp
addons/LSP-Windowed/: README.md
addons/LSP-Windowed/src/: windowed_state.hpp
src/: dxgi_proxy.cpp  dxgi_proxy.hpp  input_sim.cpp  input_sim.hpp  main.cpp  window_manager.hpp  windowed_state.cpp
